# ur10e-ability-hand-ros2-PUT

./: README.md
ur10e_with_hand/: CMakeLists.txt  package.xml
ur10e_with_hand/urdf/: ability_hand_macro.urdf.xacro  ability_hand_macro.urdf.xacro.bak_fsr  ability_hand_prefixed.urdf  ability_hand_prefixed.urdf.bak  ability_hand_prefixed_clean.urdf  ability_hand_prefixed_clean.urdf.xacro  ur10e_with_hand.urdf.xacro
ur10e_with_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_with_hand_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur.srdf
ur10e_with_hand_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_simulation_gz/: README.md  ci_status.md  ur_simulation_gz.kilted.repos
ur_simulation_gz/.github/workflows/: jazzy-binary-main.yml  jazzy-binary-testing.yml  jazzy-semi-binary-main.yml  jazzy-semi-binary-testing.yml  kilted-binary-main.yml  kilted-binary-testing.yml  kilted-semi-binary-main.yml  kilted-semi-binary-testing.yml  lyrical-binary-main.yml  lyrical-binary-testing.yml  lyrical-semi-binary-main.yml  lyrical-semi-binary-testing.yml  reusable_ici.yml
ur_simulation_gz/ur_simulation_gz/: package.xml
ur_simulation_gz/ur_simulation_gz/config/: ur_controllers.yaml
ur_simulation_gz/ur_simulation_gz/doc/: index.rst
ur_simulation_gz/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
(+4 files in other folders)
